--- a/resources/scss/app/layouts/header.scss
+++ b/resources/scss/app/layouts/header.scss
@@ -60,6 +60,10 @@
     position: relative;
     z-index: 5;
 }
+.header__cart {
+    display: flex;
+    gap: 10px;
+}
 
 .icon__menu {
     cursor: pointer;
